# Triangles_for_Stognii

./: CMakeLists.txt  Readme.txt  geometry.cpp  geometry.h  geometry_base.cpp  intersection_finder.cpp  intersection_finder.h  main.cpp  triangles_generator.cpp  triangles_generator.h  vulkan_drawing.cpp  vulkan_drawing.h
input_examples/: input_example2.txt  input_example3.txt  input_example5.txt  input_example6.txt  input_example7.txt
shaders/: shader.vert
